export const snapshot = {};

snapshot[`Issue Relation Add Command - Help Text 1`] = `
stdout:
"
Usage: relation add <issueId> <relationType> <relatedIssueId>

Description:

  Add a relation between two issues

Options:

  -h, --help  - Show this help.  
  -j, --json  - Output as JSON   

Examples:

  Mark issue as blocked by another linear issue relation add ENG-123 blocked-by ENG-100
  Mark issue as blocking another   linear issue relation add ENG-123 blocks ENG-456    
  Mark issues as related           linear issue relation add ENG-123 related ENG-456   
  Mark issue as duplicate          linear issue relation add ENG-123 duplicate ENG-100 

"
stderr:
""
`;

snapshot[`Issue Relation Add Command - blocks 1`] = `
stdout:
"✓ Created relation: ENG-123 blocks ENG-456
"
stderr:
""
`;

snapshot[`Issue Relation Add Command - blocked-by shows correct order 1`] = `
stdout:
"✓ Created relation: ENG-123 blocked-by ENG-456
"
stderr:
""
`;

snapshot[`Issue Relation Add Command - JSON Output 1`] = `
stdout:
'{
  "success": true,
  "direction": "incoming",
  "relationType": "blocked-by",
  "issue": {
    "id": "issue-id-123",
    "identifier": "ENG-123"
  },
  "relatedIssue": {
    "id": "issue-id-456",
    "identifier": "ENG-456"
  },
  "relationId": "relation-id-2"
}
'
stderr:
""
`;

snapshot[`Issue Relation Add Command - JSON Validation Failure 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Invalid relation type: invalid",
    "suggestion": "Must be one of: blocks, blocked-by, related, duplicate",
    "context": "Failed to create relation"
  }
}
'
stderr:
""
`;

snapshot[`Issue Relation Delete Command - JSON Output 1`] = `
stdout:
'{
  "success": true,
  "direction": "outgoing",
  "relationType": "blocks",
  "issue": {
    "id": "issue-id-123",
    "identifier": "ENG-123"
  },
  "relatedIssue": {
    "id": "issue-id-456",
    "identifier": "ENG-456"
  },
  "relationId": "relation-id-3"
}
'
stderr:
""
`;

snapshot[`Issue Relation Delete Command - JSON Validation Failure 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Invalid relation type: invalid",
    "suggestion": "Must be one of: blocks, blocked-by, related, duplicate",
    "context": "Failed to delete relation"
  }
}
'
stderr:
""
`;

snapshot[`Issue Relation List Command - JSON Output 1`] = `
stdout:
'{
  "issue": {
    "id": "issue-id-123",
    "identifier": "ENG-123",
    "title": "Parent issue",
    "url": "https://linear.app/issue/ENG-123"
  },
  "outgoing": [
    {
      "id": "relation-out-1",
      "type": "blocks",
      "issue": {
        "id": "issue-id-456",
        "identifier": "ENG-456",
        "title": "Blocked issue",
        "url": "https://linear.app/issue/ENG-456",
        "dueDate": "2026-03-20",
        "state": {
          "name": "Todo",
          "color": "#94a3b8"
        }
      }
    }
  ],
  "incoming": [
    {
      "id": "relation-in-1",
      "type": "blocked-by",
      "issue": {
        "id": "issue-id-789",
        "identifier": "ENG-789",
        "title": "Blocking issue",
        "url": "https://linear.app/issue/ENG-789",
        "dueDate": null,
        "state": {
          "name": "In Progress",
          "color": "#3b82f6"
        }
      }
    }
  ]
}
'
stderr:
""
`;
